Fix heading spacing on completed task list.

--- a/assets/sass/pages/projects/view.scss
+++ b/assets/sass/pages/projects/view.scss
@@ -15,6 +15,10 @@
     align-items: center;
 
     margin-bottom: 0;
-
   }
+
+}
+// Completed task list
+.project-view .task-list {
+  margin-top: $space * 5;
 }
